--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="open">Open</string>
     <string name="close">Close</string>
     <string name="latest_Songs">Latest Songs</string>
+    <string name="new_Songs">New Songs</string>
     <string name="main_menu">Main Menu</string>
     <string name="search">Search</string>
     <string name="song_search">Song Search</string>
