--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="close">Close</string>
     <string name="latest_Songs">Latest Songs</string>
     <string name="new_Songs">New Songs</string>
+    <string name="special">Special Songs</string>
+    <string name="more">More</string>
     <string name="main_menu">Main Menu</string>
     <string name="search">Search</string>
     <string name="song_search">Song Search</string>
@@ -24,5 +26,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="nothing_found">Nothing Found!</string>
     <string name="_00_00">00:00</string>
+    <string name="dash">-</string>
 
 </resources>
