--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="nothing_found">Nothing Found!</string>
     <string name="_00_00">00:00</string>
     <string name="dash">-</string>
+    <string name="download">download</string>
+    <string name="favorite">Favorite</string>
 </resources>
