--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="dash">-</string>
     <string name="download">download</string>
     <string name="favorite">Favorite</string>
+    <string name="no_internet_connection">No Internet Connection</string>
 </resources>
