--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,8 @@
     <string name="download">download</string>
     <string name="favorite">Favorite</string>
     <string name="UnFavorite">UnFavorite</string>
+    <string name="start_downloading">Start Downloading</string>
+    <string name="download_completed">Download Completed</string>
     <string name="delete">delete</string>
     <string name="no_internet_connection">No Internet Connection</string>
 </resources>
