--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="_00_00">00:00</string>
     <string name="dash">-</string>
     <string name="download">download</string>
+    <string name="try_again">مجدد تلاش کنید</string>
     <string name="favorite">Favorite</string>
     <string name="UnFavorite">UnFavorite</string>
     <string name="start_downloading">Start Downloading</string>
