--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,6 @@
     <string name="download_completed">Download Completed</string>
     <string name="delete">delete</string>
     <string name="no_internet_connection">No Internet Connection</string>
+    <string name="empty_favorite">Favorite List Is Empty</string>
+    <string name="empty_download">Download List Is Empty</string>
 </resources>
